--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -19,7 +19,7 @@
         "right": 20
       },
       background_image={
-        "backgroundPosition": "MIDDLE_CENTER",
+        "backgroundPosition": "TOP_CENTER",
         "backgroundSize": "cover",
         "imageUrl": get_asset_url("../images/home-banner.png")
       },
@@ -28,7 +28,7 @@
       {% dnd_column %}
         {% dnd_row %}
           {% dnd_module path="@hubspot/rich_text",
-            flexbox_positioning="TOP_CENTER"
+            horizontal_alignment="TOP_CENTER"
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
@@ -40,7 +40,7 @@
         {% end_dnd_row %}
         {% dnd_row %}
           {% dnd_module path="../modules/button",
-            horizontal_alignment="CENTER",
+            horizontal_alignment="TOP_CENTER",
             button_link="#",
             button_text="Free Trial"
           %}
@@ -61,7 +61,7 @@
           }
         %}
           {% dnd_module path="@hubspot/header",
-            flexbox_positioning="MIDDLE_CENTER",
+            horizontal_alignment="TOP_CENTER",
             header_tag="h2",
             value="Get More Leads For Your Business Today"
           %}
@@ -82,7 +82,7 @@
             {% dnd_row %}
               {% dnd_module
                 path="../modules/icon",
-                flexbox_positioning="MIDDLE_CENTER",
+                horizontal_alignment="TOP_CENTER",
                 icon_type={
                     "name": "clock",
                     "unicode": "f017",
@@ -109,7 +109,7 @@
             {% dnd_row %}
               {% dnd_module
                 path="../modules/icon",
-                flexbox_positioning="MIDDLE_CENTER",
+                horizontal_alignment="TOP_CENTER",
                 icon_type={
                     "name": "book",
                     "type": "SOLID",
@@ -136,7 +136,7 @@
             {% dnd_row %}
               {% dnd_module
                 path='../modules/icon',
-                flexbox_positioning="MIDDLE_CENTER",
+                horizontal_alignment="TOP_CENTER",
                 icon_type={
                     "name": "user",
                     "type": "SOLID",
@@ -206,7 +206,7 @@
           {% dnd_row %}
             {% dnd_module
               path="../modules/button",
-              flexbox_positioning='MIDDLE_LEFT',
+              horizontal_alignment='TOP_LEFT',
               button_link="#",
               button_text="Learn More"
             %}
@@ -227,7 +227,7 @@
             }
           %}
             {% dnd_module path="@hubspot/rich_text",
-              flexbox_positioning="MIDDLE_CENTER"
+              horizontal_alignment="TOP_CENTER"
             %}
               {% module_attribute "html" %}
                 <div style="text-align: center">
@@ -242,7 +242,7 @@
               path="../modules/statistic",
               offset=0,
               width=3,
-              flexbox_positioning="MIDDLE_CENTER",
+              horizontal_alignment="TOP_CENTER",
               statistic_number="10",
               statistic_unit="k",
               statistic_percentage="50",
@@ -253,7 +253,7 @@
               path="../modules/statistic",
               offset=3,
               width=3,
-              flexbox_positioning="MIDDLE_CENTER",
+              horizontal_alignment="TOP_CENTER",
               statistic_number="98",
               statistic_unit="%",
               statistic_percentage="98",
@@ -264,7 +264,7 @@
               path="../modules/statistic",
               offset=6,
               width=3,
-              flexbox_positioning="MIDDLE_CENTER",
+              horizontal_alignment="TOP_CENTER",
               statistic_number="54",
               statistic_unit="k",
               statistic_percentage="72",
@@ -275,7 +275,7 @@
               path="../modules/statistic",
               offset=9,
               width=3,
-              flexbox_positioning="MIDDLE_CENTER",
+              horizontal_alignment="TOP_CENTER",
               statistic_number="85",
               statistic_unit="",
               statistic_percentage="85",
@@ -290,7 +290,7 @@
     {# Testimonial Section #}
     {% dnd_section
       background_image={
-        "backgroundPosition": "MIDDLE_CENTER",
+        "backgroundPosition": "TOP_CENTER",
         "backgroundSize": "cover",
         "imageUrl": get_asset_url("../images/testimonials-banner.png")
       }
@@ -305,7 +305,7 @@
           }
          %}
           {% dnd_module path="@hubspot/rich_text",
-            flexbox_positioning="TOP_CENTER"
+            horizontal_alignment="TOP_CENTER"
           %}
             {% module_attribute "html" %}
               <div style="text-align: center;">
@@ -319,7 +319,7 @@
             path="../modules/testimonial",
             offset=0,
             width=4,
-            flexbox_positioning="MIDDLE_CENTER",
+            horizontal_alignment="TOP_CENTER",
             testimonial_title="Wow, this is amazing!",
             testimonial_name="Jim Robbins"
             testimonial_image={
@@ -332,7 +332,7 @@
             path="../modules/testimonial",
             offset=4,
             width=4,
-            flexbox_positioning="MIDDLE_CENTER",
+            horizontal_alignment="TOP_CENTER",
             testimonial_title="Awesome product!",
             testimonial_name="Dawn Doe"
             testimonial_image={
@@ -345,7 +345,7 @@
             path="../modules/testimonial",
             offset=8,
             width=4,
-            flexbox_positioning="MIDDLE_CENTER",
+            horizontal_alignment="TOP_CENTER",
             testimonial_title="Incredible support!",
             testimonial_name="Alan Dixon"
             testimonial_image={
@@ -364,7 +364,7 @@
         path="@hubspot/linked_image",
         offset=0,
         width=2,
-        flexbox_positioning="MIDDLE_CENTER",
+        horizontal_alignment="TOP_CENTER",
         img={
           "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
@@ -377,7 +377,7 @@
         path="@hubspot/linked_image",
         offset=2,
         width=2,
-        flexbox_positioning="MIDDLE_CENTER",
+        horizontal_alignment="TOP_CENTER",
         img={
           "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
@@ -390,7 +390,7 @@
         path="@hubspot/linked_image",
         offset=4,
         width=2,
-        flexbox_positioning="MIDDLE_CENTER",
+        horizontal_alignment="TOP_CENTER",
         img={
           "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
@@ -403,7 +403,7 @@
         path="@hubspot/linked_image",
         offset=6,
         width=2,
-        flexbox_positioning="MIDDLE_CENTER",
+        horizontal_alignment="TOP_CENTER",
         img={
           "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
@@ -416,7 +416,7 @@
         path="@hubspot/linked_image",
         offset=8,
         width=2,
-        flexbox_positioning="MIDDLE_CENTER",
+        horizontal_alignment="TOP_CENTER",
         img={
           "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
@@ -429,7 +429,7 @@
         path="@hubspot/linked_image",
         offset=10,
         width=2,
-        flexbox_positioning="MIDDLE_CENTER",
+        horizontal_alignment="TOP_CENTER",
         img={
           "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
@@ -452,7 +452,7 @@
       {% dnd_column %}
         {% dnd_row %}
           {% dnd_module path="@hubspot/rich_text",
-            flexbox_positioning="TOP_CENTER"
+            horizontal_alignment="TOP_CENTER"
           %}
           {% module_attribute "html" %}
             <div style="text-align: center;">
@@ -464,7 +464,7 @@
         {% end_dnd_row %}
         {% dnd_row %}
           {% dnd_module path="../modules/button",
-            flexbox_positioning="MIDDLE_CENTER",
+            horizontal_alignment="TOP_CENTER",
             button_link="#",
             button_text="Free Trial"
           %}
