--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -28,7 +28,7 @@
       {% dnd_column %}
         {% dnd_row %}
           {% dnd_module path="@hubspot/rich_text",
-            flexbox_positioning="TOP_CENTER"
+            horizontal_alignment="TOP_CENTER"
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
@@ -65,7 +65,7 @@
       %}
         {% dnd_row %}
           {% dnd_module path="../modules/pillar-menu",
-            flexbox_positioning="MIDDLE_LEFT",
+            horizontal_alignment="TOP_LEFT",
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
@@ -105,7 +105,7 @@
           %}
             {% dnd_row %}
               {% dnd_module path="../modules/pillar-section-title",
-                flexbox_positioning="MIDDLE_LEFT",
+                horizontal_alignment="TOP_LEFT",
                 pillar_section_title="What Can I Automate?"
               %}
               {% end_dnd_module %}
@@ -136,7 +136,7 @@
             {% dnd_row %}
                 {% dnd_module
                   path="../modules/Pillar Section Title",
-                  flexbox_positioning="MIDDLE_LEFT",
+                  horizontal_alignment="TOP_LEFT",
                   pillar_section_title="What Shouldn't I Automate?"
                 %}
               {% end_dnd_module %}
@@ -205,7 +205,7 @@
           %}
             {% dnd_row %}
               {% dnd_module path="../modules/Pillar Section Title",
-                flexbox_positioning="MIDDLE_LEFT",
+                horizontal_alignment="TOP_LEFT",
                 pillar_section_title="How Can I Automate It?"
               %}
               {% end_dnd_module %}
@@ -236,7 +236,7 @@
             {% dnd_row %}
                 {% dnd_module
                   path="../modules/Pillar Section Title",
-                  flexbox_positioning="MIDDLE_LEFT",
+                  horizontal_alignment="TOP_LEFT",
                   pillar_section_title="How Do I Track Results?"
                 %}
               {% end_dnd_module %}
