--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -28,7 +28,7 @@
       {% dnd_column %}
         {% dnd_row %}
           {% dnd_module path="@hubspot/rich_text",
-            flexbox_positioning="TOP_CENTER"
+            horizontal_alignment="TOP_CENTER"
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
@@ -98,7 +98,7 @@
           {% dnd_row %}
             {% dnd_module
               path="../modules/button",
-              flexbox_positioning="MIDDLE_LEFT",
+              horizontal_alignment="TOP_LEFT",
               link="#",
               button_text="Free Trial"
             %}
