--- a/src/templates/landing-page.html
+++ b/src/templates/landing-page.html
@@ -37,7 +37,7 @@
           }
         %}
           {% dnd_module path="@hubspot/logo",
-            flexbox_positioning="MIDDLE_CENTER",
+            horizontal_alignment="TOP_CENTER",
             img={
               "override_inherited_src": true,
               "src": get_asset_url("../images/sprout-theme-logo.png"),
@@ -53,7 +53,7 @@
             path="@hubspot/linked_image",
             offset=0,
             width=4,
-            flexbox_positioning="TOP_CENTER",
+            horizontal_alignment="TOP_CENTER",
             img={
               "src": get_asset_url("../images/ebook.png"),
               "alt": "Ebook cover",
@@ -65,7 +65,7 @@
             path="@hubspot/rich_text",
             offset=4,
             width=4,
-            flexbox_positioning="MIDDLE_LEFT"
+            horizontal_alignment="TOP_LEFT"
           %}
             {% module_attribute "html" %}
               <div>
@@ -79,7 +79,7 @@
             path="@hubspot/form",
             offset=8,
             width=4,
-            flexbox_positioning="TOP_CENTER",
+            horizontal_alignment="TOP_CENTER",
             title="Yes! Send Me the Ebook!"
           %}
           {% end_dnd_module %}
