Make body-container class BEM

--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -8,7 +8,7 @@
 
 {% block body %}
 <main class="body-container-wrapper">
-  {% dnd_area "dnd_area" class="body-container body-container-pillar", label="Main section" %}
+  {% dnd_area "dnd_area" class="body-container body-container--pillar", label="Main section" %}
 
     {# Banner Section #}
     {% dnd_section max_width=760,
