Fixing horizontal alignment issue

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -28,7 +28,7 @@
       {% dnd_column %}
         {% dnd_row %}
           {% dnd_module path="@hubspot/rich_text",
-            horizontal_alignment="TOP_CENTER"
+            horizontal_alignment="CENTER"
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
@@ -197,7 +197,7 @@
             path="../modules/team-member",
             offset=0,
             width=4,
-            horizontal_alignment="TOP_CENTER",
+            horizontal_alignment="CENTER",
             team_member_image={
                 "src": get_asset_url("../images/team-member-one.jpg"),
                 "alt": "Sarah Stevens"
@@ -211,7 +211,7 @@
             path="../modules/team-member",
             offset=4,
             width=4,
-            horizontal_alignment="TOP_CENTER",
+            horizontal_alignment="CENTER",
             team_member_image={
                 "src": get_asset_url("../images/team-member-two.png"),
                 "alt": "Joshua Beck"
@@ -225,7 +225,7 @@
             path="../modules/team-member",
             offset=8,
             width=4,
-            horizontal_alignment="TOP_CENTER",
+            horizontal_alignment="CENTER",
             team_member_image={
                 "src": get_asset_url("../images/team-member-three.jpg"),
                 "alt": "Gene Maxwell"
