--- a/src/templates/blank.html
+++ b/src/templates/blank.html
@@ -27,7 +27,7 @@
       {% dnd_column %}
         {% dnd_row %}
           {% dnd_module path="@hubspot/rich_text",
-            horizontal_alignment="TOP_CENTER"
+            horizontal_alignment="CENTER"
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
