--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -28,7 +28,7 @@
       {% dnd_column %}
         {% dnd_row %}
           {% dnd_module path="@hubspot/rich_text",
-            horizontal_alignment="TOP_CENTER"
+            horizontal_alignment="CENTER"
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
@@ -87,7 +87,7 @@
             {% dnd_row %}
               {% dnd_module
                 path="../modules/icon",
-                horizontal_alignment="TOP_CENTER",
+                horizontal_alignment="CENTER",
                 icon_type={
                     "name": "map-pin",
                     "type": "SOLID",
@@ -115,7 +115,7 @@
             {% dnd_row %}
               {% dnd_module
                 path="../modules/icon",
-                horizontal_alignment="TOP_CENTER",
+                horizontal_alignment="CENTER",
                 icon_type={
                     "name": "phone",
                     "type": "SOLID",
@@ -143,7 +143,7 @@
             {% dnd_row %}
               {% dnd_module
                 path='../modules/icon',
-                horizontal_alignment="TOP_CENTER",
+                horizontal_alignment="CENTER",
                 icon_type={
                     "name": "envelope",
                     "type": "SOLID",
