--- a/src/templates/thank-you.html
+++ b/src/templates/thank-you.html
@@ -27,7 +27,7 @@
       {% dnd_column %}
         {% dnd_row %}
           {% dnd_module path="@hubspot/rich_text",
-            horizontal_alignment="TOP_CENTER"
+            horizontal_alignment="CENTER"
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
@@ -54,7 +54,7 @@
         {% end_dnd_row %}
         {% dnd_row %}
           {% dnd_module path="../modules/button",
-            horizontal_alignment="TOP_CENTER",
+            horizontal_alignment="CENTER",
             button_link="#",
             button_text="Download eBook"
           %}
