--- a/src/templates/blank.html
+++ b/src/templates/blank.html
@@ -3,37 +3,38 @@
   isAvailableForNewContent: true
   label: Blank
 -->
-{% extends "./layouts/base.html" %}
+{% extends './layouts/base.html' %}
 
 {% block body %}
 <main class="body-container-wrapper">
-  {% dnd_area "dnd_area" class='body-container body-container--blank', label='Main section' %}
+  {% dnd_area 'dnd_area' class='body-container body-container--blank', label='Main section' %}
 
     {# Banner Section #}
-    {% dnd_section max_width=760,
-      padding={
-        "top": 130,
-        "bottom": 130,
-        "left": 20,
-        "right": 20
-      },
+    {% dnd_section
       background_image={
-        "backgroundPosition": "MIDDLE_CENTER",
-        "backgroundSize": "cover",
-        "imageUrl": get_asset_url("../images/blank-banner.jpg")
+        'backgroundPosition': 'MIDDLE_CENTER',
+        'backgroundSize': 'cover',
+        'imageUrl': get_asset_url('../images/blank-banner.jpg')
       },
-      vertical_alignment="MIDDLE"
+      max_width=760,
+      padding={
+        'top': 130,
+        'right': 20,
+        'bottom': 130,
+        'left': 20
+      },
+      vertical_alignment='MIDDLE'
     %}
       {% dnd_column %}
         {% dnd_row %}
-          {% dnd_module path="@hubspot/rich_text",
-            horizontal_alignment="CENTER"
+          {% dnd_module
+            path='@hubspot/rich_text'
           %}
-          {% module_attribute "html" %}
-            <div style="text-align: center">
-              <h1 style="color: #fff; margin-bottom: 0;">Blank</h1>
-            </div>
-          {% end_module_attribute %}
+            {% module_attribute 'html' %}
+              <div style="text-align: center">
+                <h1 style="color: #fff; margin-bottom: 0;">Blank</h1>
+              </div>
+            {% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
@@ -45,11 +46,13 @@
     {% dnd_section %}
       {% dnd_column %}
         {% dnd_row %}
-          {% dnd_module path="@hubspot/rich_text" %}
-          {% module_attribute "html" %}
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comm odo consequat. Uom ad minim veniam, quis nostrud exercitation.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comm odo consequat. Uom ad minim veniam, quis nostrud exercitation.</p>
-          {% end_module_attribute %}
+          {% dnd_module
+            path='@hubspot/rich_text'
+          %}
+            {% module_attribute 'html' %}
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comm odo consequat. Uom ad minim veniam, quis nostrud exercitation.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comm odo consequat. Uom ad minim veniam, quis nostrud exercitation.</p>
+            {% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
