Cleaning up about page template

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -335,7 +335,7 @@
             horizontal_alignment='CENTER',
             offset=4,
             testimonial_image={
-              'src': get_asset_url('../images/dawm.png'),
+              'src': get_asset_url('../images/dawn.png'),
               'alt': 'Dawn Doe'
             },
             testimonial_name='Dawn Doe',
