Cleaning up pricing page template

--- a/src/templates/blank.html
+++ b/src/templates/blank.html
@@ -57,7 +57,7 @@
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
-    {# End Content #}
+    {# End Content Section #}
 
   {% end_dnd_area %}
 </main>
