--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -4,41 +4,43 @@
   label: Pillar
   screenshotPath: ../images/template-previews/pillar.png
 -->
-{% extends "./layouts/base.html" %}
+{% extends './layouts/base.html' %}
 
 {% block body %}
 <main class="body-container-wrapper">
-  {% dnd_area "dnd_area" class="body-container body-container--pillar", label="Main section" %}
+  {% dnd_area 'dnd_area' class='body-container body-container--pillar', label='Main section' %}
 
     {# Banner Section #}
-    {% dnd_section max_width=760,
-      padding={
-        "top": 130,
-        "bottom": 130,
-        "left": 20,
-        "right": 20
-      },
+    {% dnd_section
       background_image={
-        "backgroundPosition": "MIDDLE_CENTER",
-        "backgroundSize": "cover",
-        "imageUrl": get_asset_url("../images/pillar-banner.jpg")
+        'backgroundPosition': 'MIDDLE_CENTER',
+        'backgroundSize': 'cover',
+        'imageUrl': get_asset_url('../images/pillar-banner.jpg')
       },
-      vertical_alignment="MIDDLE"
+      max_width=760,
+      padding={
+        'top': 130,
+        'right': 20,
+        'bottom': 130,
+        'left': 20
+      },
+      vertical_alignment='MIDDLE'
     %}
       {% dnd_column %}
         {% dnd_row %}
-          {% dnd_module path="@hubspot/rich_text",
-            horizontal_alignment="CENTER"
+          {% dnd_module
+            path='@hubspot/rich_text'
           %}
-          {% module_attribute "html" %}
-            <div style="text-align: center">
-              <h1 style="color: #FFFFFF; margin-bottom: 0;">How Automation Can Help Your Business</h1>
-            </div>
-          {% end_module_attribute %}
+            {% module_attribute 'html' %}
+              <div style="text-align: center">
+                <h1 style="color: #fff; margin-bottom: 0;">How Automation Can Help Your Business</h1>
+              </div>
+            {% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
+    {# End Banner Section #}
 
     {# Top Content Section #}
     {% dnd_section %}
@@ -48,9 +50,9 @@
       %}
         {% dnd_row %}
           {% dnd_module
-            path="@hubspot/rich_text",
+            path='@hubspot/rich_text'
           %}
-            {% module_attribute "html" %}
+            {% module_attribute 'html' %}
               <div>
                 <p>Automation can be an incredible tool that can help increase your productivity. Not having to worry about the small things allows you to focus on the bigger and more important things.</p>
                 <p>Whether you are a small business or a large corporation, automation can be a key tool to helping your company grow. Some of the benefits of automation include increasing efficiency, improving productivity, and lowering costs. Before creating automation for the sake of automation, it is important to have an automation plan. Read more below on how you can start using automation for your business.</p>
@@ -64,22 +66,19 @@
         width=4
       %}
         {% dnd_row %}
-          {% dnd_module path="../modules/pillar-menu",
-            horizontal_alignment="LEFT",
+          {% dnd_module
+            path='../modules/pillar-menu',
+            horizontal_alignment='LEFT'
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
+    {# End Top Content Section #}
 
     {# First Pillar Chapter #}
     {% dnd_section
-      background_color={
-        r: 241,
-        g: 241,
-        b: 241,
-        a: 1.0
-      }
+      background_color={{ theme.color.secondary.color }}
     %}
       {% dnd_column %}
         {% dnd_row %}
@@ -89,11 +88,11 @@
           %}
             {% dnd_row %}
               {% dnd_module
-                path="@hubspot/linked_image",
+                path='@hubspot/linked_image',
                 img={
-                  "src": get_asset_url("../images/pillar-one.jpg"),
-                  "alt": "Woman typing on computer",
-                  "size_type": "auto"
+                  'alt': 'A woman typing on a computer',
+                  'size_type': 'auto',
+                  'src': get_asset_url('../images/pillar-one.jpg')
                 }
               %}
               {% end_dnd_module %}
@@ -104,15 +103,18 @@
             width=8
           %}
             {% dnd_row %}
-              {% dnd_module path="../modules/pillar-section-title",
-                horizontal_alignment="LEFT",
-                pillar_section_title="What Can I Automate?"
+              {% dnd_module
+                path='../modules/pillar-section-title',
+                horizontal_alignment='LEFT',
+                pillar_section_title='What Can I Automate?'
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
             {% dnd_row %}
-              {% dnd_module path="@hubspot/rich_text" %}
-                {% module_attribute "html" %}
+              {% dnd_module
+                path='@hubspot/rich_text'
+              %}
+                {% module_attribute 'html' %}
                   <div>
                     <p>One of the first things that we recommend doing is taking notes of the tasks that you're doing on a daily basis over the course of a week. Anything that you find yourself doing more than three times in a week mark with a star.</p>
                     <p>Not everything that is done more than once can be automated but you should identify what things in your list can be automated.</p>
@@ -124,6 +126,7 @@
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
+    {# End First Pillar Chapter #}
 
     {# Second Pillar Chapter #}
     {% dnd_section %}
@@ -134,16 +137,18 @@
             width=8
           %}
             {% dnd_row %}
-                {% dnd_module
-                  path="../modules/Pillar Section Title",
-                  horizontal_alignment="LEFT",
-                  pillar_section_title="What Shouldn't I Automate?"
-                %}
+              {% dnd_module
+                path='../modules/pillar-section-title',
+                horizontal_alignment='LEFT',
+                pillar_section_title='What Should I Not Automate?'
+              %}
               {% end_dnd_module %}
             {% end_dnd_row %}
             {% dnd_row %}
-              {% dnd_module path="@hubspot/rich_text" %}
-                {% module_attribute "html" %}
+              {% dnd_module
+                path='@hubspot/rich_text'
+              %}
+                {% module_attribute 'html' %}
                   <div>
                     <p>It is important to keep in mind that not everything should be automated. Just because you can automate it doesn't mean that you should.</p>
                     <p>Anything that requires a higher level of focus or attention we recommend keeping off of your automation list. For example, communication with your co-workers and customers we don't recommend automating.</p>
@@ -158,11 +163,11 @@
           %}
             {% dnd_row %}
               {% dnd_module
-                path="@hubspot/linked_image",
+                path='@hubspot/linked_image',
                 img={
-                  "src": get_asset_url("../images/pillar-two.jpg"),
-                  "alt": "Notebook with to do list",
-                  "size_type": "auto"
+                  'alt': 'Notebook with to do list',
+                  'size_type': 'auto',
+                  'src': get_asset_url('../images/pillar-two.jpg')
                 }
               %}
               {% end_dnd_module %}
@@ -171,15 +176,11 @@
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
+    {# End Second Pillar Chapter #}
 
     {# Third Pillar Chapter #}
     {% dnd_section
-      background_color={
-        r: 241,
-        g: 241,
-        b: 241,
-        a: 1.0
-      }
+      background_color={{ theme.color.secondary.color }}
     %}
       {% dnd_column %}
         {% dnd_row %}
@@ -189,11 +190,11 @@
           %}
             {% dnd_row %}
               {% dnd_module
-                path="@hubspot/linked_image",
+                path='@hubspot/linked_image',
                 img={
-                  "src": get_asset_url("../images/pillar-three.jpg"),
-                  "alt": "Two women working on a project on a computer",
-                  "size_type": "auto"
+                  'alt': 'Two women working on a project on a computer',
+                  'size_type': 'auto',
+                  'src': get_asset_url('../images/pillar-three.jpg')
                 }
               %}
               {% end_dnd_module %}
@@ -204,15 +205,18 @@
             width=8
           %}
             {% dnd_row %}
-              {% dnd_module path="../modules/Pillar Section Title",
-                horizontal_alignment="LEFT",
-                pillar_section_title="How Can I Automate It?"
+              {% dnd_module
+                path='../modules/pillar-section-title',
+                horizontal_alignment='LEFT',
+                pillar_section_title='How Can I Automate It?'
               %}
               {% end_dnd_module %}
             {% end_dnd_row %}
             {% dnd_row %}
-              {% dnd_module path="@hubspot/rich_text" %}
-                {% module_attribute "html" %}
+              {% dnd_module
+                path='@hubspot/rich_text'
+              %}
+                {% module_attribute 'html' %}
                   <div>
                     <p>Once you know what you can automate and what you should automate, you'll want to look into how you can automate it. There is a lot of software out there that can help with this.</p>
                     <p>We'd recommend giving our software a try. Contact us today for a free extended trial.</p>
@@ -224,6 +228,7 @@
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
+    {# End Third Pillar Chapter #}
 
     {# Fourth Pillar Chapter #}
     {% dnd_section %}
@@ -234,16 +239,18 @@
             width=8
           %}
             {% dnd_row %}
-                {% dnd_module
-                  path="../modules/Pillar Section Title",
-                  horizontal_alignment="LEFT",
-                  pillar_section_title="How Do I Track Results?"
-                %}
+              {% dnd_module
+                path='../modules/pillar-section-title',
+                horizontal_alignment='LEFT',
+                pillar_section_title='How Do I Track Results?'
+              %}
               {% end_dnd_module %}
             {% end_dnd_row %}
             {% dnd_row %}
-              {% dnd_module path="@hubspot/rich_text" %}
-                {% module_attribute "html" %}
+              {% dnd_module
+                path='@hubspot/rich_text'
+              %}
+                {% module_attribute 'html' %}
                   <div>
                     <p>Now that you've started to automate your daily tasks it is important to keep track of what you're automating so that you can see how much time you're saving.</p>
                     <p>There are several softwares out there that can help you with this. We recommend giving our free browser extension a try so that you can start tracking your automation for free today!</p>
@@ -258,11 +265,11 @@
           %}
             {% dnd_row %}
               {% dnd_module
-                path="@hubspot/linked_image",
+                path='@hubspot/linked_image',
                 img={
-                  "src": get_asset_url("../images/pillar-four.jpg"),
-                  "alt": "A paper with charts and graphs",
-                  "size_type": "auto"
+                  'alt': 'A paper with charts and graphs',
+                  'size_type': 'auto',
+                  'src': get_asset_url('../images/pillar-four.jpg')
                 }
               %}
               {% end_dnd_module %}
@@ -271,15 +278,11 @@
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
+    {# End Fourth Pillar Chapter #}
 
     {# Bottom Offer Section #}
     {% dnd_section
-      background_color={
-        r: 52,
-        g: 181,
-        b: 229,
-        a: 1.0
-      }
+      background_color={{ theme.color.secondary.color }}
     %}
       {% dnd_column %}
         {% dnd_row %}
@@ -288,18 +291,22 @@
             width=6
           %}
             {% dnd_row %}
-              {% dnd_module path="@hubspot/rich_text" %}
-                {% module_attribute "html" %}
-                  <h2 style="color: #FFFFFF;">Download Our Free Ebook</h2>
+              {% dnd_module
+                path='@hubspot/rich_text'
+              %}
+                {% module_attribute 'html' %}
+                  <h2 style="color: #fff;">Download Our Free Ebook</h2>
                 {% end_module_attribute %}
               {% end_dnd_module %}
             {% end_dnd_row %}
             {% dnd_row %}
-              {% dnd_module path="@hubspot/rich_text" %}
-                {% module_attribute "html" %}
+              {% dnd_module
+                path='@hubspot/rich_text'
+              %}
+                {% module_attribute 'html' %}
                   <div>
-                    <p style="color: #FFFFFF;">Discover 10 ways that you can use automation to help increase your productivity. This includes:</p>
-                    <ul style="color: #FFFFFF;">
+                    <p style="color: #fff;">Discover 10 ways that you can use automation to help increase your productivity. This includes:</p>
+                    <ul style="color: #fff;">
                       <li>A free copy of our extensive eBook guide with tips on how you can increase your productivity by automating your daily tasks.</li>
                       <li>An exclusive link to our online community so that you can discuss what you learn with a group of like-minded individuals.</li>
                       <li>An extended free trial of our software so that you can immediately put some of these tips into action.</li>
@@ -314,14 +321,16 @@
             width=6
           %}
             {% dnd_row %}
-              {% dnd_module path="@hubspot/form" %}
+              {% dnd_module
+                path='@hubspot/form'
+              %}
               {% end_dnd_module %}
             {% end_dnd_row %}
           {% end_dnd_column %}
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
-
+    {# End Bottom Offer Section #}
 
   {% end_dnd_area %}
 </main>
