--- a/src/templates/system/password-prompt.html
+++ b/src/templates/system/password-prompt.html
@@ -3,12 +3,16 @@
   isAvailableForNewContent: true
   label: Sprout - password prompt
 -->
-{% extends "../layouts/base.html" %}
+{% extends '../layouts/base.html' %}
 
 {% block body %}
-<div class="content-wrapper">
-  <div class="systems-page">
-    {% module "password_prompt" path="@hubspot/password_prompt" %}
-  </div>
-</div>
+<main class="body-container-wrapper">
+  <section class="content-wrapper">
+    <div class="systems-page">
+      {% module 'password_prompt'
+        path='@hubspot/password_prompt'
+      %}
+    </div>
+  </section>
+</main>
 {% endblock body %}
