--- a/src/templates/system/500.html
+++ b/src/templates/system/500.html
@@ -3,15 +3,15 @@
   isAvailableForNewContent: true
   label: Sprout - 500 error
 -->
-{% extends "../layouts/base.html" %}
+{% extends '../layouts/base.html' %}
 
 {% block body %}
-<div class="content-wrapper">
-  <div class="error-page" data-error="500">
-    <h1 class="error-page__heading">
-      Something isn't quite right
-    </h1>
-    <p>Sorry, an internal server error occurred. But have no fear, we're on the case!</p>
-  </div>
-</div>
+<main class="body-container-wrapper">
+  <section class="content-wrapper">
+    <div class="error-page" data-error="500">
+      <h1 class="error-page__heading">Something isn't quite right</h1>
+      <p>Sorry, an internal server error occurred. But have no fear, we're on the case!</p>
+    </div>
+  </section>
+</main>
 {% endblock body %}
