--- a/src/templates/system/membership_login.html
+++ b/src/templates/system/membership_login.html
@@ -3,29 +3,30 @@
   isAvailableForNewContent: true
   label: Sprout - membership login
 -->
-{% extends "../layouts/base.html" %}
+{% extends '../layouts/base.html' %}
 
 {% block header %}
-
 {% endblock %}
 
 {% block body %}
-<div class="content-wrapper">
-  <div class="systems-page">
-    <h4>Sign in to view this page</h4>
-    <p class="introduction">This page is only available to people who have been given access.</p>
-    <div class="form-container">
-      {% member_login "my_login"
-        email_label= "Email",
-        password_label= "Password",
-        remember_me_label= "Remember Me",
-        submit_button_text= "Login",
-        reset_password_text= "Forgot your password?"
-      %}
+<main class="body-container-wrapper">
+  <section class="content-wrapper">
+    <div class="systems-page">
+      <h4>Sign in to view this page</h4>
+      <p class="introduction">This page is only available to people who have been given access.</p>
+      <div class="form-container">
+        {% member_login 'my_login'
+          email_label= 'Email',
+          password_label= 'Password',
+          remember_me_label= 'Remember Me',
+          reset_password_text= 'Forgot your password?',
+          submit_button_text= 'Login'
+        %}
+      </div>
+      <div class="footer">
+        <p>Having trouble? <a href="{{'mailto:' ~ site_settings.membershipWebsiteAdmin}}">Contact the admin</a>.</p>
+      </div>
     </div>
-    <div class="footer">
-      <p>Having trouble? <a href="{{'mailto:' ~ site_settings.membershipWebsiteAdmin}}">Contact the admin</a>.</p>
-    </div>
-  </div>
-</div>
+  </section>
+</main>
 {% endblock %}
