--- a/src/templates/system/membership_reset_password.html
+++ b/src/templates/system/membership_reset_password.html
@@ -3,27 +3,28 @@
   isAvailableForNewContent: true
   label: Sprout - reset password
 -->
-{% extends "../layouts/base.html" %}
+{% extends '../layouts/base.html' %}
 
 {% block header %}
-
 {% endblock %}
 
 {% block body %}
-<div class="content-wrapper">
-  <div class="systems-page">
-    <h4>Reset your password</h4>
-    <p class="introduction">Enter a new password.</p>
-    <div class="form-container">
-      {% password_reset "my_password_reset"
-        password_label="Password",
-        password_confirm_label="Confirm Password",
-        submit_button_text= "Save Password"
-      %}
+<main class="body-container-wrapper">
+  <section class="content-wrapper">
+    <div class="systems-page">
+      <h4>Reset your password</h4>
+      <p class="introduction">Enter a new password.</p>
+      <div class="form-container">
+        {% password_reset 'my_password_reset'
+          password_confirm_label='Confirm Password',
+          password_label='Password',
+          submit_button_text= 'Save Password'
+        %}
+      </div>
+      <div class="footer">
+        <p>Having trouble? <a href="{{'mailto:' ~ site_settings.membershipWebsiteAdmin}}">Contact the admin</a>.</p>
+      </div>
     </div>
-    <div class="footer">
-      <p>Having trouble? <a href="{{'mailto:' ~ site_settings.membershipWebsiteAdmin}}">Contact the admin</a>.</p>
-    </div>
-  </div>
-</div>
+  </section>
+</main>
 {% endblock %}
