--- a/src/templates/system/subscriptions-confirmation.html
+++ b/src/templates/system/subscriptions-confirmation.html
@@ -3,12 +3,16 @@
   isAvailableForNewContent: true
   label: Sprout - email subscriptions confirmation
 -->
-{% extends "../layouts/base.html" %}
+{% extends '../layouts/base.html' %}
 
 {% block body %}
-<div class="content-wrapper">
-  <div class="systems-page">
-    {% module "subscriptions_confirmation" path="@hubspot/email_subscriptions_confirmation" %}
-  </div>
-</div>
+<main class="body-container-wrapper">
+  <section class="content-wrapper">
+    <div class="systems-page">
+      {% module 'subscriptions_confirmation'
+        path='@hubspot/email_subscriptions_confirmation'
+      %}
+    </div>
+  </section>
+</main>
 {% endblock body %}
