--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page_meta.html_title }}</title>
-    {% if site_settings.favicon_src %}<link rel="shortcut icon" href="{{ site_settings.favicon_src }}" />{% endif %}
+    {% if site_settings.favicon_src %}
+      <link rel="shortcut icon" href="{{ site_settings.favicon_src }}">
+    {% endif %}
     <meta name="description" content="{{ page_meta.meta_description }}">
-    {{ require_css(get_asset_url("../../css/main.css")) }}
-    {{ require_css(get_asset_url("../../css/theme-overrides.css")) }}
-    {{ require_js(get_asset_url("../../js/main.js")) }}
+    {{ require_css(get_asset_url('../../css/main.css')) }}
+    {{ require_css(get_asset_url('../../css/theme-overrides.css')) }}
+    {{ require_js(get_asset_url('../../js/main.js')) }}
     {{ standard_header_includes }}
   </head>
   <body>
     <div class="body-wrapper {{ builtin_body_classes }}">
       {% block header %}
-        {% global_partial path="../partials/header.html" %}
+        {% global_partial path='../partials/header.html' %}
       {% endblock header %}
 
       {% block body %}
       {% endblock body %}
 
       {% block footer %}
-        {% global_partial path="../partials/footer.html" %}
+        {% global_partial path='../partials/footer.html' %}
       {% endblock footer %}
     </div>
     {{ standard_footer_includes }}
